--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=finance_tracker_db_29yo
+DATABASE_URL=postgresql://finance_tracker_db_29yo_user:cV6RjwlRzOshC0DAnLQW3x7X2xXrgwbw@dpg-ct9rsfjtq21c73bsbkbg-a/finance_tracker_db_29yo
 PORT=3001
